@@ -1,8 +1,7 @@
-KNOWNBUG
+CORE broken-smt-backend
 decoder1.sv
 
 ^EXIT=0$
 ^SIGNAL=0$
 --
 --
-No support for recursive module dependencies.
