@@ -1,0 +1,7 @@
+CORE
+fibonacci.sv
+
+^EXIT=0$
+^SIGNAL=0$
+--
+--
