@@ -1,7 +1,7 @@
 CORE
 module_not_found1.v
 --bound 1 --top main
-^found no file that provides module Verilog::some_module_that_does_not_exist$
+^file .* line 3: module not found$
 ^EXIT=2$
 ^SIGNAL=0$
 --
